# inferproxy

./: .env.example  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
app/: config.py
app/providers/: __init__.py  base.py  openai_provider.py  registry.py  schemas.py
app/telemetry/: setup.py
docker/: docker-compose.yml  loki-config.yaml  otel-collector-config.yaml
tests/providers/: test_openai_provider.py  test_registry.py
