[project]
name = "inferproxy"
version = "0.1.0"
description = "Inference proxy service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "redis",
    "aiokafka",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-asyncpg",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-redis",
    "prometheus-client",
    "structlog",
    "sentence-transformers",
    "pgvector",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "black",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]
